--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <!-- Metadados -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WeatherWise - Consulta de Clima</title>
+    <!-- Ícone do site -->
     <link rel="icon" href="img/siteIcon.png" />
+    <!-- Estilos CSS -->
     <link rel="stylesheet" href="style.css" />
+    <!-- Fontes do Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Krona+One&family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet" />
+    <!-- Ícones do Phosphor Icons -->
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
   <body>
+    <!-- Cabeçalho -->
     <header>  
+      <!-- Container de vídeo em background -->
       <div class="video-container">
         <video autoplay loop muted>
           <source src="./img/videoplayback.mp4" type="video/mp4" />
         </video>
       </div>
+      <!-- Navegação principal -->
       <main class="main-header">
         <nav class="main-header-nav">
+          <!-- Título do aplicativo -->
           <div class="main-header-nav-title">
             <p class="main-header-nav-title-weather">WEATHER</p>
             <p class="main-header-nav-title-wise">WISE</p>
           </div>
+          <!-- Logo do aplicativo -->
           <img
             src="img/navIcon.png"
             class="main-header-nav-logo"
@@ -36,11 +43,12 @@
         </nav>
       </main>
     </header>
-    <!-- <h1>Consulta do Clima Tempo</h1> -->
-
+    <!-- Seção principal para consulta do clima -->
     <main>
       <section class="main-city">
+        <!-- Título da seção -->
         <h3>Confira o clima de uma cidade</h3>
+        <!-- Formulário para consulta do clima -->
         <div class="main-city-form">
           <form id="formClima">
             <input type="text" id="cityInput" name="cityInput" />
@@ -49,38 +57,16 @@
         </div>
       </section>
     </main>
-
+    <!-- Seção principal para exibição do resultado do clima -->
     <main class="main-clima">
+      <!-- Container para exibição do resultado do clima -->
       <div id="climaResult"></div>
+      <!-- Ícone de carregamento -->
       <div id="loader" class="hide">
         <i class="fa-solid fa-spinner"></i>
       </div>
     </main>
-
+    <!-- Scripts JavaScript -->
     <script src="script.js"></script>
   </body>
 </html>
-
-<!-- <main class="main-clima">
-  <div id="climaResult">
-    <div class="clima-city-name">
-      <i class="ph ph-map-pin"></i>
-      <p id="cityResult">${cidadeFormatada}</p>
-    </div>
-    <div class="clima-city-temp">
-      <i class="ph ph-thermometer-simple"></i>
-      <p id="tempResult">${data.Temperatura}ºC</p>
-    </div>
-    <div class="clima-city-umidade">
-      <i class="ph ph-drop"></i>
-      <p id="umidadeResult">${data.Umidade}%</p>
-    </div>
-    <div class="clima-city-vento">
-      <i class="ph ph-wind"></i>
-      <p id="ventoResult">${data.VelocidadeDoVento} m/s</p>
-    </div>
-    <div class="clima-city-icon">
-      <img src="${data.Icone}">
-    </div>
-  </div>
-</main> -->
